# falcie

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  cgoskel.go_backup  falcie  falcie.go  go.mod  go.sum  t.txt
docs/: CMakeLists.txt  Doxyfile.Doxygen
docs/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/sphinx/: CMakeLists.txt  conf.py  conf.py.in  index.rst
docs/sphinx/_static/css/: dark.css  defaults.css  style.css  style_original_manual.css
docs/sphinx/etro/: cactaur.rst  index.rst
docs/sphinx/lindzei/: index.rst
docs/sphinx/lindzei/orphan/: blockheader.rst  index.rst
docs/sphinx/pulse/: federatedblock.rst  index.rst  pulse.rst
docs/sphinx/pulse/anima/: anima.rst  index.rst  matrix.rst  neural_network.rst
docs/sphinx/pulse/cactuar/: crypto.rst  encoding.rst  index.rst  math.rst  target.rst
docs/sphinx/pulse/dahaka/: blockchain.rst  chain.rst  index.rst  orderedlist.rst  tree.rst
etro/: CMakeLists.txt  blockheader.c  cactuar.c  crypto.c  encoding.c  endianness_check.h  etro.c  etro.cpp  federated_blockchain.cpp  federatedblock.cpp  federatedblockchain.cpp  list.cpp  main.c  main.cpp  math.c  matrix.c  networkupdate.cpp
etro/python/: CMakeLists.txt  falpy.c  falpy_networkupdate.c  falpy_utils.py  falpy_weights.c  pyproject.toml  setup.py  tf_debug.py  tf_debug_fed.py  tf_falpy.py  tf_falpy_working.py  tf_format_test.py  tf_model_matrix.c  tf_with_vars.py
etro/python/cifar10_conv/: qmt.py  tf_falpy_fed.py  tf_falpy_fed_4split.py  tf_falpy_script.py  tf_falpy_sing.py  tf_falpy_working.py
etro/python/penguin_dense/: tf_falpy_old.py  tf_non_fed.py
etro/python/pythonConfig/: pyproject.toml  setup.cfg
etro/python/src/falcie/: __main__.py
etro/python/src/falcie/falpy/: CMakeLists.txt  falpy.c  falpy_weights.c
falcie/: CMakeLists.txt
falcie/anima/: CMakeLists.txt  anima-matrix.cpp  anima-matrix_old.cpp  anima-neural_network.cpp  anima-neural_network_old.cpp
falcie/atomos/: CMakeLists.txt  atomos-network_unix.cpp
falcie/cactuar/: CMakeLists.txt  block.cpp  blockchain.cpp  blockheader.cpp  contract_account.cpp  federated_block.cpp  federated_contract_account.cpp  federated_network.cpp  federated_user_account.cpp  target.cpp  transaction.cpp  user_account.cpp
falcie/cocoon/: CMakeLists.txt  cocoon.cpp  cocoon_old.cpp
falcie/dahaka/: CMakeLists.txt
falcie/etro/: CMakeLists.txt  etro.c  federatedblock.cpp  main.c  matrix.cpp  networkupdate.cpp
falcie/etro/Android/: .gitignore  build.gradle  settings.gradle
falcie/etro/Android/app/: build.gradle
falcie/etro/Android/app/src/main/: AndroidManifest.xml
falcie/etro/Android/app/src/main/assets/: cifar10_1.tflite  cifar10_100.tflite
falcie/etro/Android/faldroid/: CmakeLists.txt  cifar10_binary_reorder.py  faldroid.cpp  tflite_model.py  viewDataset.py
falcie/etro/Android/faldroid/trained_models/: 25_cifar10.ckpt  25_cifar10.tflite  saved_model.pb
falcie/etro/Android/faldroid/trained_models/100epochs/: cifar10.tflite  saved_model.pb
falcie/etro/Android/faldroid/trained_models/100epochs/variables/: variables.data-00000-of-00001  variables.index
falcie/etro/Android/faldroid/trained_models/1epochs/: cifar10.tflite  saved_model.pb
falcie/etro/Android/faldroid/trained_models/2epochs/: cifar10.tflite  saved_model.pb
falcie/etro/Android/faldroid/trained_models/variables/: variables.data-00000-of-00001  variables.index
falcie/etro/Android/gradle/wrapper/: gradle-wrapper.properties
falcie/etro/etro/: CMakeLists.txt  block.cpp  blockchain.cpp  etro.cpp
falcie/etro/falpy/: CMakeLists.txt  pyproject.toml  setup.py
falcie/etro/falpy/MRITumor/: tf_falpy_script.py
falcie/etro/falpy/cifar10_conv/: tf_falpy_20_percent.py  tf_falpy_script.py
falcie/etro/falpy/falpy/: CMakeLists.txt  falpy_networkupdate.c
falcie/etro/falpy/origpackage/: tf_falpy_script.py
falcie/etro/falpy/penguin_dense/: tf_falpy_newest.py
falcie/etro/python/: CMakeLists.txt  setup.cfg  setup.py
falcie/etro/python/cifar10_conv/: tf_falpy_main.py  tf_falpy_script.py  tf_falpy_splittable.py
falcie/etro/python/penguin_dense/: tf_debug_fed.py  tf_falpy.py
falcie/etro/python/src/falcie/: __init__.py  __main__.py
falcie/etro/python/src/falcie/falpy/: CMakeLists.txt  falpy_block.c  falpy_blockchain.c
falcie/etro/valhalla/: CMakeLists.txt
falcie/etro/valhalla/app/: CMakeLists.txt  main.cpp
falcie/etro/valhalla/valhalla/: CMakeLists.txt  model.cpp  model_function.cpp  model_function_impl.cpp  model_impl.cpp
falcie/etro/valhalla/valhalla/capi_internal/: model_impl.cpp
falcie/gran/: CMakeLists.txt  gran.cpp
falcie/tests/: CMakeLists.txt  anima.cpp  main.cpp  pulse.cpp
lindzei/: CMakeLists.txt  basic_block.go  cocoon.go
lindzei/cocoon/: CMakeLists.txt  cocoon.c  cocoon.cpp
lindzei/orphan/: CMakeLists.txt  federated_block.cpp  federated_blockchain.cpp  federated_blockheader.cpp  federated_network.cpp  federated_transaction.cpp  federatedblock.c
pulse/: CMakeLists.txt  blockheader.c  doc.go  federatedblock.c
pulse/anima/: CMakeLists.txt  ai.c  anima-dimensions.cpp  anima-matrix.c  anima-matrix.cpp  anima-neural_network.cpp  anima.c  linalg.c  matrix.c  matrix_avx.c
pulse/anima/go/: a.go
pulse/atomos/: CMakeLists.txt  atomos-network.cpp  atomos-network_unix.cpp  atomos-network_win32.cpp
pulse/atomos/go/: p2pNode.go
pulse/cactuar/: CMakeLists.txt  blockheader.c  blockheader.cpp  cactuar.c  cactuar.go  cactuar_math.c  chain.go  crypto.c  crypto.cpp  eliptical_curve_pool.cpp  encoding.c  encoding.cpp  endianness_check.cpp  hash.cpp  hash_pool.cpp  lzw.go_skeleton  math.c  math.cpp  openssl_wrapper.cpp  signing.cpp  target.c  target.cpp  varint_test.go
pulse/cactuar/go/: conversions.go  pair.go  varint.go
pulse/dahaka/: CMakeLists.txt  block.go  blockchain.go  blockheader.c  chain.go  federated_block.go  federatedblock.c  ordered_list.go  transaction.go  transactionpool.go
pulse/dahaka/go/: block.go  chain.go  doc.go  ordered_list.go  pooledTransaction.go  transactionpool.go
pulse/gran/: CMakeLists.txt  gran.cpp
tests/: CMakeLists.txt  anima.cpp  cactuar.cpp  pulse.cpp
(+200 files in other folders)
